Fixed issue where grey bleed into middle box

--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ p{
     bottom: 0;
     margin: auto;
 }
+#box2{
+    font-weight: bold;
+}
 #box3{
     background-color: blue;
 }
